<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" >
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/margin"
		android:background="@color/title_background_color">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/help_title"
			android:textSize="16dp" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/margin"
		android:gravity="center_vertical">
		<TextView
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="@string/help_short_cuts"
			android:textSize="16dp"/>
		<Button
			android:id="@+id/btn_short_cuts"
			android:text="@string/confirm"
			style="@style/ButtonStyle" />
	</LinearLayout>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="2dp"
		android:background="@color/seperator_color" />
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/margin"
		android:gravity="center_vertical">
		<TextView
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="@string/help_gesture"
			android:textSize="16dp"/>
		<Button
			android:id="@+id/btn_gesture"
			android:text="@string/confirm"
			style="@style/ButtonStyle" />
	</LinearLayout>
</LinearLayout>