<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout 
        android:id="@+id/storage_location_layer"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <LinearLayout
		    android:padding="@dimen/margin"
	   	    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/title_background_color">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/storage_location"
	            android:textSize="16dp" />
		</LinearLayout>
		<LinearLayout
		    android:id="@+id/storage_info"
	       	android:layout_marginLeft="@dimen/margin"
	       	android:layout_marginBottom="@dimen/margin"
	   	    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
	    android:padding="@dimen/margin"
   	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/title_background_color"
	    android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storage"
            android:textSize="16dp" />
	</LinearLayout>

	<LinearLayout
		android:layout_margin="@dimen/margin"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="@string/storage_download_size"
			android:textSize="16dp" />
		<TextView
			android:id="@+id/storage_download_size"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="16dp" />
	</LinearLayout>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="2dp"
		android:background="@color/seperator_color" />

	<LinearLayout
		android:layout_margin="@dimen/margin"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="@string/storage_etc_size"
			android:textSize="16dp" />
		<TextView
			android:id="@+id/storage_etc_size"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="16dp" />
	</LinearLayout>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="2dp"
		android:background="@color/seperator_color" />

	<LinearLayout
		android:layout_margin="@dimen/margin"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="@string/storage_empty_size"
			android:textSize="16dp" />
		<TextView
			android:id="@+id/storage_empty_size"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="16dp" />
	</LinearLayout>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="2dp"
		android:background="@color/seperator_color" />

	<LinearLayout
		android:layout_margin="@dimen/margin"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="@string/storage_cache_size"
			android:textSize="16dp" />
		<TextView
			android:id="@+id/storage_cache_size"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="16dp" />
	</LinearLayout>

	<Button
       android:id="@+id/current_storage_empty"
       android:padding="@dimen/margin"
       android:layout_marginLeft="@dimen/margin"
       android:layout_marginRight="@dimen/margin"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/storage_empty"
       android:textSize="16dp"
       android:textColor="@android:color/white"
       android:background="@drawable/button_color" />
</LinearLayout>